# dtc-llm-zoomcamp-2026

./: .gitignore  README.md  agents.ipynb  homework.ipynb  notebook.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag_cleaned.ipynb
01-agentic-rag/: .gitignore  README.md  agents.ipynb  homework.ipynb  homework_backup.ipynb  main.py  notebook.ipynb  persistent_rag_cleaned.ipynb  pyproject.toml  rag_helper.py
02-vector-search/: README.md  pyproject.toml  vector_search.ipynb  vector_search_persistant.ipynb  vector_search_pg_vector.ipynb
02-vector-search/llm-zoomcamp-hw2/: README.md  homework.ipynb
02-vector-search/llm-zoomcamp-onnx/: pyproject.toml  test.ipynb
03-orchestration/: README.md  docker-compose.yml  homework.md
03-orchestration/flows/: 1_chat_without_rag.yaml  2_chat_with_rag.yaml  4_simple_agent.yaml  5_web_research_agent.yaml  6_multi_agent_research.yaml
04-evaluation/: .gitignore  01-data-gen.ipynb  README.md  pyproject.toml  search-eval.ipynb
04-evaluation/data/: ground_truth-new.csv
