[project]
name = "04-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "minsearch>=0.2.0",
    "openai>=2.47.0",
    "pandas>=3.0.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tqdm>=4.69.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
